<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_activity_box_background"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="#5638fd"
        android:layout_margin="10dp"
        android:text="@string/tutoring_subject"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_text"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/postive_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:background="@drawable/login_button_background"
            android:text="@string/yes"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:focusable="true" />
        <Button
            android:id="@+id/negative_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginStart="40dp"
            android:text="@string/no"
            android:textColor="@android:color/white"
            android:background="@drawable/red_button_background"
            android:textStyle="bold"
            android:focusable="true" />
    </LinearLayout>

</RelativeLayout>



