<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="false"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/register_relative_layout">

        <ImageView
            android:id="@+id/logoo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="-30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />
        <TextView
            android:id="@+id/signin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoo"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:fontFamily="@font/arimo"
            android:text="@string/signin"
            android:textSize="25sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/Username"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:hint="Username"
            android:background="@drawable/button_background"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/asar"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:drawablePadding="20dp"
            android:layout_below="@+id/signin_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/sign_email_address"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:hint="@string/email_address"
            android:background="@drawable/button_background"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/asar"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:drawablePadding="20dp"
            android:layout_below="@+id/Username"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/signin_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:hint="@string/password"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_background"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/asar"
            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:drawablePadding="20dp"
            android:layout_below="@+id/sign_email_address"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/signin_btn"
            android:fontFamily="@font/arimo"
            android:layout_below="@id/signin_password"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Signin"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_button_background"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"
            android:layout_below="@+id/signin_btn"
            android:layout_marginStart="17dp"
            android:buttonTint="#5638fd"
            android:checked="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="17dp" />

        <TextView
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/signin_btn"
            android:layout_alignLeft="@id/checkbox"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/arimo"
            android:text="@string/by_signing_in_you_are_agree_to_our"
            android:textSize="15sp"
            android:layout_alignStart="@id/checkbox" />

        <TextView
            android:id="@+id/sign_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/arimo"
            android:text="@string/sign_in_using"
            android:textColor="#5638fd"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/social_button_layout"
            android:layout_marginTop="17dp"
            android:gravity="center"
            android:layout_below="@+id/sign_text"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/google"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/google" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/twitter"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center_horizontal"

                android:src="@drawable/twitter"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/facebook"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/facebook"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/donthave_account_text"
            android:layout_below="@id/social_button_layout"
            android:text="@string/already_have_an_account"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/arimo"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:layout_below="@id/social_button_layout"
            android:fontFamily="@font/arimo"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="98dp"
            android:layout_marginTop="12dp"
            android:textColor="#5638fd"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="LogIn"
            android:textSize="18sp" />

    </RelativeLayout>


</ScrollView>