<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".sprintActivity">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="180dp"
            android:background="@drawable/splash_background"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_name"
            android:text="@string/sprint"
            android:textSize="25sp"
            android:gravity="clip_horizontal"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:elevation="@dimen/elevation"
            android:id="@+id/linear"
            android:orientation="vertical"
            android:layout_below="@id/activity_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/main_activity_box_background">

            <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/registration_image"
                android:layout_height="wrap_content"
                android:src="@drawable/registration"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tough_person"
                android:textSize="30sp"
                android:layout_marginStart="20dp"
                android:textAlignment="center"
                android:id="@+id/ready_Work_question"
                android:textColor="#5638fd"
                android:fontFamily="@font/arimo"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:layout_marginEnd="20dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/music_layout"
            android:layout_below="@+id/linear"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:elevation="6dp"
            android:background="@drawable/main_activity_box_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_audio"
                android:textSize="20sp"
                android:layout_margin="15dp"
                android:textColor="#5638fd"
                android:fontFamily="@font/arimo"
                android:layout_gravity="center_horizontal"/>
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/audio_layout"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_play_circle_outline_24"
                    android:id="@+id/play_btn"
                    android:layout_weight="1"/>

                <com.taishi.library.Indicator
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:background="#FFFEFE"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="center_horizontal"
                    app:bar_color="#062714"
                    app:bar_num="50"
                    app:duration="20000"
                    app:step_num="70" />

            </LinearLayout>






        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/start_sprint_btn"
            android:layout_below="@id/music_layout"
            android:background="@drawable/login_button_background"
            android:text="@string/start_sprint"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/arimo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="158dp"
            android:layout_below="@+id/start_sprint_btn"
            android:layout_centerHorizontal="true"
            android:src="@drawable/alarm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count_time"
            android:layout_below="@+id/start_sprint_btn"
            android:layout_centerHorizontal="true"
            android:text="20"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="63dp"
            />


    </RelativeLayout>
</ScrollView>